adds image assets, fixes page update on post, adds randomized backgrounds

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="Muscle-Memory">
 <head>
   <title>MuscleMemory</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js" charset="utf-8"></script>
@@ -8,8 +8,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="background">
 
-<%= yield %>
+  </div>
+
+  <%= yield %>
 
 </body>
 </html>
