--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,70 @@
  *= require_tree .
  *= require_self
  */
+
+ @font-face {
+   font-family: 'Capture';
+   src: url('Capture_it-webfont.eot');
+   src: url('Capture_it-webfont.eot?#iefix') format('embedded-opentype'),
+        url('Capture_it-webfont.woff') format('woff'),
+        url('Capture_it-webfont.ttf') format('truetype'),
+        url('Capture_it-webfont.svg#capture_itregular') format('svg');
+   font-weight: normal;
+   font-style: normal;
+ }
+
+body {
+  font-size: 16px;
+  text-align: center;
+  background-color: lightgrey;
+  font-family: 'Capture';
+  /*background: url('https://stopthehitch.files.wordpress.com/2013/06/arnold-schwarzenegger-1920x1080.jpg');
+  background-attachment: fixed;
+  background-size: cover;*/
+}
+
+#background {
+  background: url('https://images5.alphacoders.com/387/387340.jpg');
+  background-attachment: fixed;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  opacity: .3;
+  z-index: -10;
+}
+
+ul {
+  list-style-type: none;
+}
+
+h1 {
+  font-size: 3rem;
+}
+h1#title {
+  font-size: 4rem;
+  color: rgb(195, 6, 6);
+}
+
+h1#second-title {
+  color: white;
+}
+
+#wod {
+  border: 5px solid rgb(195, 6, 6);
+  margin-bottom: 50px;
+  padding: 10px;
+}
+
+.workouts {
+  height: 300px;
+  width: 50%;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.workouts h1 {
+  margin: 0;
+}
